Added Autonomous Abstract
Added Autonomus system to simplify and allow multiple programs at once

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,21 @@ Autonet/obj/Release/Autonet.pdb
 Autonet/obj/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
 Autonet/obj/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 Autonet/obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+Autonet/obj/Debug/Autonet.csproj.CoreCompileInputs.cache
+Autonet/obj/Debug/Autonet.exe
+Autonet/obj/Debug/Autonet.pdb
+.vs/Autonet/v15/Server/sqlite3/storage.ide-wal
+.vs/Autonet/v15/Server/sqlite3/storage.ide-shm
+Autonet/obj/Debug/Autonet.csproj.CoreCompileInputs.cache
+Autonet/obj/Debug/Autonet.exe
+Autonet/obj/Debug/Autonet.pdb
+Autonet/obj/Debug/Autonet.csproj.CoreCompileInputs.cache
+Autonet/obj/Debug/Autonet.exe
+Autonet/obj/Debug/Autonet.pdb
+Autonet/obj/Debug/Autonet.csproj.CoreCompileInputs.cache
+Autonet/obj/Debug/Autonet.csproj.FileListAbsolute.txt
+Autonet/obj/Debug/Autonet.csprojResolveAssemblyReference.cache
+Autonet/obj/Debug/Autonet.exe
+Autonet/obj/Debug/Autonet.pdb
+Autonet/obj/Debug/DesignTimeResolveAssemblyReferences.cache
+Autonet/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
