--- a/Autonet/Autonet.csproj
+++ b/Autonet/Autonet.csproj
@@ -45,7 +45,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arduino.cs" />
+    <Compile Include="CAutonomous.cs" />
+    <Compile Include="CRecog.cs" />
     <Compile Include="CRobot.cs" />
+    <Compile Include="Demo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
