--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ Autonet/obj/Debug/Autonet.exe
 Autonet/obj/Debug/Autonet.pdb
 Autonet/obj/Debug/DesignTimeResolveAssemblyReferences.cache
 Autonet/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+Autonet/bin/Debug/Autonet.exe
+Autonet/bin/Debug/Autonet.exe
+Autonet/bin/Debug/Autonet.pdb
+Autonet/Autonet.csproj
+Autonet/bin/Debug/Autonet.exe
+Autonet/bin/Debug/Autonet.pdb
