Added Ultrasonic support
Get data via GetSonic() in Arduino class

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ Autonet/bin/Debug/Autonet.pdb
 Autonet/Autonet.csproj
 Autonet/bin/Debug/Autonet.exe
 Autonet/bin/Debug/Autonet.pdb
+Autonet/bin/Debug/Autonet.exe
+Autonet/bin/Debug/Autonet.pdb
