--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ Autonet/bin/Debug/Autonet.exe
 Autonet/bin/Debug/Autonet.pdb
 Autonet/bin/Debug/Autonet.exe
 Autonet/bin/Debug/Autonet.pdb
+.vs/Autonet/v16/Server/sqlite3/storage.ide
+.vs/Autonet/v16/.suo
+.vs/Autonet/v16/Server/sqlite3/db.lock
