--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ Autonet/bin/Debug/Autonet.pdb
 .vs/Autonet/v16/Server/sqlite3/storage.ide
 .vs/Autonet/v16/.suo
 .vs/Autonet/v16/Server/sqlite3/db.lock
+Autonet/bin/Debug/Autonet.pdb
+Autonet/bin/Debug/Autonet.exe
+Autonet/obj/Debug/Autonet.csprojAssemblyReference.cache
+.vs/Autonet/v16/Server/sqlite3/storage.ide-shm
+.vs/Autonet/v16/Server/sqlite3/storage.ide-wal
